--- a/index.html
+++ b/index.html
@@ -4,11 +4,48 @@
 		<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' href='assets/calculator.css'>
+    <script type='text/javascript' src='./assets/angular.min.js'></script>
+    <script type='text/javascript' src-'./assets/calculator.js'></script>
 		<title>Calculator</title>
 	</head>
 	<body>
+    <div id='myCalculator'>
+      <main>
+        <section>
+          <div>
+            <h4>Incandescent</h4>
+            <p>100.0</p>
+            <p>13.4</p>
+          </div>
+        </section>
+        <section>
+          <div>
+            <h4>Halogen</h4>
+            <p>72.0</p>
+            <p>9.46</p>
+          </div>
+        </section>
+        <section>
+          <div>
+            <h4>CFL</h4>
+            <p>23.4</p>
+            <p>3.07</p>
+          </div>
+        </section>
+        <section>
+          <div>
+            <h4>LED</h4>
+            <p>20.0</p>
+            <p>2.63</p>
+          </div>
+        </section>
+      </main>
+      <form>
+        <div></div>
+        <div></div>
+        <div></div>
+      </form>
 
-		<!-- HTML markup goes here -->
-
+    </div>
 	</body>
 </html>
