Adds HTML element for form section

--- a/index.html
+++ b/index.html
@@ -41,9 +41,24 @@
         </section>
       </main>
       <form>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+          <h4>Lumens</h4>
+          <p>Brigntness <br>of bulb</p>
+          <select>
+            <option value='600'>600</option>
+            <option value='900'>900</option>
+          </select>
+        </div>
+        <div>
+          <h4>kWh</h4>
+          <p>Kilowatt-<br>hour cost</p>
+          <input type='number' value='12'>cents
+        </div>
+        <div>
+          <h4>Hours</h4>
+          <p>Usage <br>per day</p>
+          <input type='number' value='4'>
+        </div>
       </form>
 
     </div>
