--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE HTML>
-<html>
+<html ng-app='myCalculator'>
 	<head>
 		<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' href='assets/calculator.css'>
-    <script type='text/javascript' src='./assets/angular.min.js'></script>
-    <script type='text/javascript' src-'./assets/calculator.js'></script>
+    <script src='assets/angular.min.js'></script>
+    <script src='assets/calculator.js'></script>
 		<title>Calculator</title>
 	</head>
 	<body>
-    <div id='myCalculator'>
+    <div id='myCalculator' ng-controller='CalculatorController'>
       <main>
         <section class='inc'>
           <div>
@@ -44,20 +44,18 @@
         <div>
           <h4>Lumens</h4>
           <p>Brigntness <br>of bulb</p>
-          <select>
-            <option value='600'>600</option>
-            <option value='900'>900</option>
+          <select ng-model='currentLumens' ng-options='lumens as lumens for lumens in lumenOptions'>
           </select>
         </div>
         <div>
           <h4>kWh</h4>
           <p>Kilowatt-<br>hour cost</p>
-          <input type='number' value='12'> cents
+          <input type='number' ng-model='currentCost' value={{currentCost}}> cents
         </div>
         <div>
           <h4>Hours</h4>
           <p>Usage <br>per day</p>
-          <input type='number' value='4'>
+          <input type='number' ng-model='currentHours' value={{currentHours}}>
         </div>
       </form>
     </div>
