--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
         <section class='inc'>
           <div>
             <h4>Incandescent</h4>
-            <p>100.0</p>
+            <p>{{incWattage}}</p>
             <p>13.4</p>
           </div>
         </section>
         <section class='hal'>
           <div>
             <h4>Halogen</h4>
-            <p>72.0</p>
+            <p>{{halWattage}}</p>
             <p>9.46</p>
           </div>
         </section>
         <section class='cfl'>
           <div>
             <h4>CFL</h4>
-            <p>23.4</p>
+            <p>{{cflWattage}}</p>
             <p>3.07</p>
           </div>
         </section>
         <section class='led'>
           <div>
             <h4>LED</h4>
-            <p>20.0</p>
+            <p>{{ledWattage}}</p>
             <p>2.63</p>
           </div>
         </section>
@@ -44,7 +44,7 @@
         <div>
           <h4>Lumens</h4>
           <p>Brigntness <br>of bulb</p>
-          <select ng-model='currentLumens' ng-options='lumens as lumens for lumens in lumenOptions'>
+          <select ng-change='calculate()' ng-model='currentLumens' ng-options='lumens as lumens for lumens in LUMEN_OPTIONS'>
           </select>
         </div>
         <div>
