Remove angular, load from CDN

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' href='assets/calculator.css'>
-    <script src='assets/angular.min.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
     <script src='assets/calculator.js'></script>
 		<title>Calculator</title>
 	</head>
